pythonの変数名を修正。Article情報をキャッシュするクラスをarticle_info.pyに移動

--- a/app/templates/article/article_list.html
+++ b/app/templates/article/article_list.html
@@ -241,27 +241,27 @@ $(function(){
             <!-- 記事一覧 -->
               <div class="card-deck">
                 <div class="card shadow-sm bg-white rounded">
-                  {% for custom_article in custom_article_list %}
-                  <div class="card-body border-bottom article" id="{{custom_article.article.id}}">
+                  {% for article_info in article_info_list %}
+                  <div class="card-body border-bottom article" id="{{article_info.article.id}}">
                     <div class="tab-content">
                       <div class="active tab-pane" id="activity">
                         <!-- Post -->
                         <div class="post">
                           <div class="user-block row">
                             <div class="col-2">
-                            {% if custom_article.article.user.user_profile.profile_image %}
-                            <a href="{% url 'account:profile' custom_article.article.user.id %}">
-                              <img class="rounded-circle img-bordered-sm article-profile-image"  src="{{custom_article.article.user.user_profile.profile_image.url}}"  alt="user image" style="width:50px;height:50px;">
+                            {% if article_info.article.user.user_profile.profile_image %}
+                            <a href="{% url 'account:profile' article_info.article.user.id %}">
+                              <img class="rounded-circle img-bordered-sm article-profile-image"  src="{{article_info.article.user.user_profile.profile_image.url}}"  alt="user image" style="width:50px;height:50px;">
                             </a>
                             {% else %}
-                            <a href="{% url 'account:profile' custom_article.article.user.id %}">
+                            <a href="{% url 'account:profile' article_info.article.user.id %}">
                               <img class="rounded-circle img-bordered-sm article-profile-image"  src="/media/default_profile.jpg"  alt="user image" style="width:50px;height:50px;">
                             </a>
                             {% endif %}
                             </div>
                             <div class="col-10">
-                            <a href="{% url 'account:profile' custom_article.article.user.id %}" class="text-dark" style="font-weight: bold;">
-                              {{custom_article.article.user.name}}
+                            <a href="{% url 'account:profile' article_info.article.user.id %}" class="text-dark" style="font-weight: bold;">
+                              {{article_info.article.user.name}}
                             </a><br>
                             <small class="text-muted">2020/04/15</small>
                             </div>
@@ -270,12 +270,12 @@ $(function(){
                           <div class="row">
                             <div class="col-2"></div>
                             <div class="col-10">
-                              <a href = "{% url 'article:comment' custom_article.article.id %}" id="id_{{custom_article.article.id}}"></a>
+                              <a href = "{% url 'article:comment' article_info.article.id %}" id="id_{{article_info.article.id}}"></a>
                               <p>
-                                {{ custom_article.article.content }}
+                                {{ article_info.article.content }}
                               </p>
-                              {% if custom_article.article.article_media %}
-                              <img class="article-profile-image rounded border border-dark"  src="{{custom_article.article.article_media.url}}"  alt="user image" style="width:100%;height:250px;">
+                              {% if article_info.article.article_media %}
+                              <img class="article-profile-image rounded border border-dark"  src="{{article_info.article.article_media.url}}"  alt="user image" style="width:100%;height:250px;">
                               {% endif %}
                             </div>
                           </div>
@@ -284,7 +284,7 @@ $(function(){
                               <span class="dot-retweet text-lg"><span class="fas fa-retweet" style="color:rgb(70, 98, 107);"></span></span>
                             </div>
                             <div class="col-md-4 text-center align-bottom"> 
-                              {% if custom_article.is_login_user_like %}
+                              {% if article_info.is_login_user_like %}
                               <span class="link-black text-lg already-like">
                                 <span class="far fa-thumbs-up" style="color:indianred"></span>
                               </span>
@@ -293,20 +293,20 @@ $(function(){
                                 <i class="far fa-thumbs-up"></i>
                               </span>
                               {% endif %}
-                              <input type="hidden" id="id_like_article_{{custom_article.article.id}}" value="{{custom_article.login_user_favorite_article_id}}">
-                              {% if custom_article.article.favorite_article.all %}
-                                <span id="id_like_count_{{custom_article.article.id}}">
-                                  {{custom_article.article.favorite_article.all.count}}
+                              <input type="hidden" id="id_like_article_{{article_info.article.id}}" value="{{article_info.login_user_favorite_article_id}}">
+                              {% if article_info.article.favorite_article.all %}
+                                <span id="id_like_count_{{article_info.article.id}}">
+                                  {{article_info.article.favorite_article.all.count}}
                                 </span>
                               {% else %}
-                                <span id="id_like_count_{{custom_article.article.id}}"></span>
+                                <span id="id_like_count_{{article_info.article.id}}"></span>
                               {% endif %}
                             </div>
                             <div class="col-md-4 text-center align-bottom">
                               <span class="text-lg">
                                 <i class="far fa-comments" style="color:seagreen"></i>
-                                  {% if custom_article.article.comment.all.count != 0 %}
-                                    {{custom_article.article.comment.all.count}}
+                                  {% if article_info.article.comment.all.count != 0 %}
+                                    {{article_info.article.comment.all.count}}
                                   {% endif %}
                               </span>
                             </div>
