--- a/app/templates/article/following.html
+++ b/app/templates/article/following.html
@@ -138,33 +138,33 @@ $(function(){
                     <col width="50%">
                     <col width="30%">
                     <tbody>
-                        {% for following_dto in following_dto_list %}
+                        {% for following_info in following_info_list %}
                       <tr style="cursor: pointer;">
                         <td>
-                            {% if following_dto.relation_profile.profile_image %}
-                              <a href="{% url 'account:profile' following_dto.relation_profile.user.id %}" class="text-dark" style="font-weight: bold;">
-                                <img class="rounded-circle img-bordered-sm following_profile_image" src="{{following_dto.relation_profile.profile_image.url}}"  alt="user image" style="width:60px;height:60px;">
+                            {% if following_info.relation_profile.profile_image %}
+                              <a href="{% url 'account:profile' following_info.relation_profile.user.id %}" class="text-dark" style="font-weight: bold;">
+                                <img class="rounded-circle img-bordered-sm following_profile_image" src="{{following_info.relation_profile.profile_image.url}}"  alt="user image" style="width:60px;height:60px;">
                               </a>
                             {% else %}
-                              <a href="{% url 'account:profile' following_dto.relation_profile.user.id %}" class="text-dark" style="font-weight: bold;">
+                              <a href="{% url 'account:profile' following_info.relation_profile.user.id %}" class="text-dark" style="font-weight: bold;">
                                 <img class="rounded-circle img-bordered-sm following_profile_image" src="/media/default_profile.jpg"  alt="user image" style="width:60px;height:60px;">
                               </a>
                             {% endif %}
                         </td>
                         <td>
-                           <a href="{% url 'account:profile' following_dto.relation_profile.user.id %}" class="text-dark" style="font-weight: bold;">
-                             {{following_dto.relation_profile.user.name}}
+                           <a href="{% url 'account:profile' following_info.relation_profile.user.id %}" class="text-dark" style="font-weight: bold;">
+                             {{following_info.relation_profile.user.name}}
                            </a>
-                            <p class="text-muted">{{following_dto.relation_profile.introduction}}</p>
+                            <p class="text-muted">{{following_info.relation_profile.introduction}}</p>
                         </td>
                         <td class="text-center align-middle">
-                          {% if following_dto.relation_profile.user.id == login_user.id %}
-                          {% elif following_dto.is_follow == 0 %}
+                          {% if following_info.relation_profile.user.id == login_user.id %}
+                          {% elif following_info.is_follow == 0 %}
                             <button type="button" class="btn btn-outline-primary float-right un-follow">フォローする</button>
-                          {% elif following_dto.is_follow == 1 %}
+                          {% elif following_info.is_follow == 1 %}
                             <button type="button" class="btn bg-gradient-primary float-right already-follow">フォロー中</button>
                           {% endif %} 
-                            <input type='hidden' value="{{following_dto.relation.id}}" id="{{following_dto.relation_profile.user.id}}">
+                            <input type='hidden' value="{{following_info.relation.id}}" id="{{following_info.relation_profile.user.id}}">
                         </td>
                       </tr>
                         {% endfor %}
